# CodeReviewerAI

./: .gitignore  LICENSE  README.md
crewai/codereviewerai/: .env.example  .gitignore  ARCHITEKTUR_DOKUMENTATION.md  DOKUMENTATION.md  IMPLEMENTIERUNG_ZUSAMMENFASSUNG.md  README.md  pyproject.toml
crewai/codereviewerai/input/: projects.json
crewai/codereviewerai/output/: architecture_review.md  code_quality_documentation.md  code_quality_review.md  final_report.md  performance_analysis.md  repo_setup.json  security_review.md  static_analysis.md  test_coverage_analysis.md
crewai/codereviewerai/src/codereviewerai/: crew.py  main.py
crewai/codereviewerai/src/codereviewerai/config/: agents.yaml  tasks.yaml
crewai/codereviewerai/src/codereviewerai/mcp/: __init__.py  codebase_server.py  mcp_server.py  security_server.py
crewai/codereviewerai/src/codereviewerai/mcp/code_metrics_server/: __init__.py  server.py
crewai/codereviewerai/src/codereviewerai/mcp/code_metrics_server/tools/: __init__.py  complexity.py  dependencies.py  duplication.py  security_patterns.py  statistics.py
crewai/codereviewerai/src/codereviewerai/tools/: clone_repo.py  dependency_inspector.py  file_discovery.py  read_files.py  read_inputs_tool.py  read_projects_json.py  repo_utils.py  run_static_analysis.py  security_scanner.py
crewai/travelgenerator/: README.md  pyproject.toml
crewai/travelgenerator/src/travelgenerator/: crew.py  main.py
docs/latex/: library.bib  main.tex
docs/template/: main.tex
docs/template_do_not_edit/: main.tex
