[project]
name = "codereviewerai"
version = "0.1.0"
description = "CodeReviewerAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
codereviewerai = "codereviewerai.main:run"
run_crew = "codereviewerai.main:run"
train = "codereviewerai.main:train"
replay = "codereviewerai.main:replay"
test = "codereviewerai.main:test"
run_with_trigger = "codereviewerai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
