[project]
name = "travelgenerator"
version = "0.1.0"
description = "TravelGenerator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
travelgenerator = "travelgenerator.main:run"
run_crew = "travelgenerator.main:run"
train = "travelgenerator.main:train"
replay = "travelgenerator.main:replay"
test = "travelgenerator.main:test"
run_with_trigger = "travelgenerator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
